--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
   },
   "homepage": "https://github.com/Harmiox/stark#readme",
   "dependencies": {
-    "@yamdbf/core": "^3.0.2",
+    "@yamdbf/core": "github:yamdbf/core#indev",
     "dotenv": "^6.1.0",
     "ffmpeg": "0.0.4",
+    "install": "^0.13.0",
     "joi": "^14.3.1",
     "node-opus": "^0.3.2",
+    "npm": "^6.10.0",
     "process": "^0.11.10",
     "sequelize": "^5.9.2",
     "simple-youtube-api": "^5.2.1",
     "winston": "^3.2.1",
-    "yamdbf": "^3.0.1",
     "youtube-search-promise": "^1.0.3",
     "yt-search": "^0.4.1",
     "ytdl-core": "^0.29.2"
@@ -44,6 +45,7 @@
     "@types/node": "^12.0.12",
     "@types/sequelize": "^4.28.3",
     "@types/validator": "^10.11.1",
+    "@types/ws": "^6.0.1",
     "tslint-config-prettier": "^1.15.0",
     "tslint-microsoft-contrib": "^5.2.1",
     "tslint": "^5.18.0",
