--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-opus": "^0.3.2",
     "npm": "^6.10.0",
     "process": "^0.11.10",
+    "scrape-youtube": "0.0.4",
     "sequelize": "^5.9.2",
     "simple-youtube-api": "^5.2.1",
     "winston": "^3.2.1",
