Trying out cheerio for webscrabing.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "homepage": "https://github.com/Harmiox/stark#readme",
   "dependencies": {
+    "@types/cheerio": "^0.22.12",
+    "@types/request": "^2.48.1",
+    "@types/request-promise": "^4.1.44",
     "@yamdbf/core": "github:yamdbf/core#indev",
+    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^6.1.0",
     "ffmpeg": "0.0.4",
     "install": "^0.13.0",
@@ -31,6 +35,9 @@
     "node-opus": "^0.3.2",
     "npm": "^6.10.0",
     "process": "^0.11.10",
+    "request": "^2.88.0",
+    "request-client": "^1.0.0",
+    "request-promise": "^4.2.4",
     "scrape-youtube": "0.0.4",
     "sequelize": "^5.9.2",
     "simple-youtube-api": "^5.2.1",
