--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "ffmpeg": "0.0.4",
     "install": "^0.13.0",
     "joi": "^14.3.1",
+    "node-gyp": "^5.0.3",
     "node-opus": "^0.3.2",
     "npm": "^6.10.0",
     "process": "^0.11.10",
+    "rebuild": "^0.1.2",
     "request": "^2.88.0",
     "request-client": "^1.0.0",
     "request-promise": "^4.2.4",
@@ -44,7 +46,8 @@
     "winston": "^3.2.1",
     "youtube-search-promise": "^1.0.3",
     "yt-search": "^0.4.1",
-    "ytdl-core": "^0.29.3"
+    "ytdl-core": "^0.29.3",
+    "ytdl-core-discord": "^1.0.3"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.27",
