--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@types/request": "^2.48.1",
     "@types/request-promise": "^4.1.44",
     "@yamdbf/core": "github:yamdbf/core#indev",
+    "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "discord.js-lavalink": "^2.2.3",
     "dotenv": "^6.1.0",
     "ffmpeg": "0.0.4",
     "install": "^0.13.0",
